force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Icon__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Icon__c</fullName>
        <description>Icon for this custom action</description>
        <inlineHelpText>Icon for this custom action</inlineHelpText>
        <label>Icon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3dots</fullName>
                </value>
                <value>
                    <fullName>add</fullName>
                </value>
                <value>
                    <fullName>adduser</fullName>
                </value>
                <value>
                    <fullName>align-justify</fullName>
                </value>
                <value>
                    <fullName>approval</fullName>
                </value>
                <value>
                    <fullName>apps</fullName>
                </value>
                <value>
                    <fullName>arrowdown</fullName>
                </value>
                <value>
                    <fullName>arrowup</fullName>
                </value>
                <value>
                    <fullName>attach</fullName>
                </value>
                <value>
                    <fullName>attention</fullName>
                </value>
                <value>
                    <fullName>attention-circled</fullName>
                </value>
                <value>
                    <fullName>back</fullName>
                </value>
                <value>
                    <fullName>ban</fullName>
                </value>
                <value>
                    <fullName>bold</fullName>
                </value>
                <value>
                    <fullName>builder</fullName>
                </value>
                <value>
                    <fullName>calendar</fullName>
                </value>
                <value>
                    <fullName>cancel</fullName>
                </value>
                <value>
                    <fullName>cancel-circled</fullName>
                </value>
                <value>
                    <fullName>ccw</fullName>
                </value>
                <value>
                    <fullName>center_align_text</fullName>
                </value>
                <value>
                    <fullName>chart</fullName>
                </value>
                <value>
                    <fullName>chat</fullName>
                </value>
                <value>
                    <fullName>check</fullName>
                </value>
                <value>
                    <fullName>chevrondown</fullName>
                </value>
                <value>
                    <fullName>chevronleft</fullName>
                </value>
                <value>
                    <fullName>chevronright</fullName>
                </value>
                <value>
                    <fullName>chevronup</fullName>
                </value>
                <value>
                    <fullName>circle-empty</fullName>
                </value>
                <value>
                    <fullName>clear</fullName>
                </value>
                <value>
                    <fullName>clock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>