force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Label__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label displayed for this action in the UI.</description>
        <inlineHelpText>Label displayed for this action in the UI.</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Products</fullName>
                    <default>true</default>
                    <label>Add Products</label>
                </value>
                <value>
                    <fullName>Add Favorites</fullName>
                </value>
                <value>
                    <fullName>Renew Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Upgrade Assets</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Quick Save</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Reset Discounts</fullName>
                </value>
                <value>
                    <fullName>Optional: All</fullName>
                </value>
                <value>
                    <fullName>Optional: None</fullName>
                </value>
                <value>
                    <fullName>Calculate</fullName>
                </value>
                <value>
                    <fullName>Delete Lines</fullName>
                </value>
                <value>
                    <fullName>Add Group</fullName>
                </value>
                <value>
                    <fullName>Ungroup</fullName>
                </value>
                <value>
                    <fullName>Add Solution Group</fullName>
                </value>
                <value>
                    <fullName>Clone Group</fullName>
                </value>
                <value>
                    <fullName>Delete Group</fullName>
                </value>
                <value>
                    <fullName>Add To Favorites</fullName>
                </value>
                <value>
                    <fullName>Remove From Favorites</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>Clone Line</fullName>
                </value>
                <value>
                    <fullName>Reconfigure Line</fullName>
                </value>
                <value>
                    <fullName>Desegment Line</fullName>
                </value>
                <value>
                    <fullName>Resegment Line</fullName>
                </value>
                <value>
                    <fullName>View Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Launch External</fullName>
                </value>
                <value>
                    <fullName>Edit Lines</fullName>
                </value>
                <value>
                    <fullName>Preview Document</fullName>
                </value>
                <value>
                    <fullName>Generate Document</fullName>
                </value>
                <value>
                    <fullName>Include Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>