force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__URL__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__URL__c</fullName>
        <description>URL to visit &#39;URL&#39; is selected as the Target Object.</description>
        <inlineHelpText>Specify URL to navigate to. You have access to Line, Group, and Quote record fields dependent on selected location. Examples: http://www.salesforce.com, http://www.yoursite.com/{!Id}, or /{!SBQQ__Quote__c.Name}/{!SBQQ__YourCustomVar__c}</inlineHelpText>
        <label>URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>